# pxc-tools

./: Cargo.toml  LICENSE  README.md
crates/pxc-render/: Cargo.toml  NODE_CHECKLIST.md  README.md
crates/pxc-render/src/: lib.rs  main.rs  project.rs  render.rs  runtime.rs  validate.rs
crates/pxc-render/src/nodes/: mod.rs
scripts/: build_python_module.py  embed_registry.py  install_python_module.py
src/: cli.rs  color.rs  graph.rs  ids.rs  lib.rs  main.rs  ops.rs  pxc.rs  python.rs  registry.rs  registry_embedded.json
