[package]
name = "pxc-tools"
version = "0.1.0"
edition = "2024"

[lib]
name = "pxc"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[features]
python = ["pyo3"]
